; ModuleID = '/home/carl/AnghaBench/lede/package/network/services/shellsync/src/extr_shellsync.c_main.c'
source_filename = "/home/carl/AnghaBench/lede/package/network/services/shellsync/src/extr_shellsync.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [47 x i8] c"Usage: shellsync <process num> <wait_timeout>\0A\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@wait_timeout = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [24 x i8] c"Processes sync failed.\0A\00", align 1
@SEM_COUNT_NAME = common dso_local global i32 0, align 4
@SEM_BLOCK_NAME = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [25 x i8] c"Processes sync succeed.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 3
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = call i32 @printf(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0))
  br label %31

11:                                               ; preds = %2
  %12 = load i8**, i8*** %5, align 8
  %13 = getelementptr inbounds i8*, i8** %12, i64 1
  %14 = load i8*, i8** %13, align 8
  %15 = call i32 @sscanf(i8* %14, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32* %6)
  %16 = load i8**, i8*** %5, align 8
  %17 = getelementptr inbounds i8*, i8** %16, i64 2
  %18 = load i8*, i8** %17, align 8
  %19 = call i32 @sscanf(i8* %18, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32* @wait_timeout)
  %20 = load i32, i32* %6, align 4
  %21 = call i64 @sync_wait(i32 %20)
  %22 = icmp slt i64 %21, 0
  br i1 %22, label %23, label %29

23:                                               ; preds = %11
  %24 = call i32 @printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i64 0, i64 0))
  %25 = load i32, i32* @SEM_COUNT_NAME, align 4
  %26 = call i32 @sem_unlink(i32 %25)
  %27 = load i32, i32* @SEM_BLOCK_NAME, align 4
  %28 = call i32 @sem_unlink(i32 %27)
  store i32 1, i32* %3, align 4
  br label %31

29:                                               ; preds = %11
  %30 = call i32 @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.3, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %31

31:                                               ; preds = %23, %29, %9
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @sscanf(i8*, i8*, i32*) #1

declare dso_local i64 @sync_wait(i32) #1

declare dso_local i32 @sem_unlink(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
